--- a/package.json
+++ b/package.json
@@ -2,12 +2,22 @@
   "name": "writtenbyboxs-api",
   "type": "module",
   "scripts": {
+    "build": "tsdown",
+    "check-types": "tsc -b",
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:start": "docker compose up -d",
+    "db:watch": "docker compose up",
+    "db:stop": "docker compose stop",
+    "db:down": "docker compose down"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.6",
+    "@prisma/client": "^6.19.0",
     "@t3-oss/env-core": "^0.13.8",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
@@ -24,6 +34,8 @@
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "prettier": "^3.6.2",
+    "prisma": "^6.19.0",
+    "tsdown": "^0.16.0",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.46.3"
