feat(auth): add Better Auth dependency and environment variables
Add Better Auth library for authentication features, including new dependencies in bun.lock and example env vars for secret and URL.

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ NODE_ENV=development
 PORT=9999
 LOG_LEVEL=debug
 CORS_ORIGINS=http://localhost:3000,http://localhost:5473
+
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=http://localhost:9999
