--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hono/node-server": "^1.19.6",
     "@prisma/client": "^6.19.0",
     "@t3-oss/env-core": "^0.13.8",
+    "better-auth": "^1.3.34",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "hono": "^4.10.4",
