--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:5473
 
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:9999
+
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
