--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^6.19.0",
     "@t3-oss/env-core": "^0.13.8",
     "better-auth": "^1.3.34",
+    "cloudinary": "^2.8.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
